--- a/src/app/users/public/public.component.html
+++ b/src/app/users/public/public.component.html
@@ -1,4 +1,4 @@
-<div class="public-profile-page usa-grid-full usa-authentication">
+<div class="public-profile-page usa-grid usa-authentication">
   <aside class="usa-width-one-fourth">
     <h1 class="user-name">{{userName}}</h1>
     <ul class="usa-sidenav-list">
