- Added submission state to all IAM pages to address changes requested to form validation visibility state - Fixed KBA password minlength requirement to not apply to initial states (untouched and pristine) - Added scripts for debugging mode for profile details KBA edit section - Updated user interface property type declarations for component dependencies
- Fixed agency picker's issue with propagating `keyup.enter` to parent form due to button type

--- a/src/app/app-components/agency-picker/agency-picker.template.html
+++ b/src/app/app-components/agency-picker/agency-picker.template.html
@@ -34,8 +34,8 @@
       </div>
     </div>
     <div class="usa-agency-picker-button-area usa-width-one" *ngIf="selectorToggle || orgRoot">
-      <button (click)="setOrganizationFromBrowse()" (keyup.enter)="setOrganizationFromBrowse()" tabindex="0">Add</button>
-      <button (click)="resetBrowse()" (keyup.enter)="resetBrowse()" tabindex="0">Clear</button>
+      <button type="button" (click)="setOrganizationFromBrowse()" (keyup.enter)="setOrganizationFromBrowse()" tabindex="0">Add</button>
+      <button type="button" (click)="resetBrowse()" (keyup.enter)="resetBrowse()" tabindex="0">Clear</button>
     </div>
   </div>
 
