--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -14,7 +14,7 @@
             </labelWrapper>
           </div>
           <div>
-            <labelWrapper [name]="'password-' + states.uid" label="Create Password" [errorMessage]="(states.submitted || password.touched) ? states.error.password : ''" [required]="true">
+            <labelWrapper [name]="'password-' + states.uid" label="Create Password" [errorMessage]="states.submitted ? states.error.password : ''" [required]="true">
               <input [type]="states.toggle ? 'text' : 'password'"
                      [id]="'password-' + states.uid"
                      [formControl]="password"
@@ -24,7 +24,7 @@
             </labelWrapper>
           </div>
           <div [ngClass]="getFormControlStates('confirmPassword')">
-            <labelWrapper [name]="'new-password-' + states.uid" label="Confirm Password" required="true" [errorMessage]="(states.submitted || confirmPassword.touched) ? states.error.confirmPassword : ''">
+            <labelWrapper [name]="'new-password-' + states.uid" label="Confirm Password" required="true" [errorMessage]="states.submitted ? states.error.confirmPassword : ''">
               <input [type]="states.toggle ? 'text' : 'password'"
                      [id]="'new-password-' + states.uid"
                      [formControl]="confirmPassword"
