--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -134,28 +134,28 @@
 					</tr>
 					<tr>
 						<td><b>Action Obligation:</b></td>
-						<td>{{current}}</td>
-						<td>{{total}}</td>
+						<td>{{awardData.amountInformation.actionObligation}}</td>
+						<td>{{awardData.amountInformation.totalActionObligation}}</td>
 					</tr>
 					<tr *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'OTA' || awardData.templateType == 'OTI'">
 						<td><b>Base and Exercised Options Value:</b></td>
-						<td>{{current}}</td>
-						<td>{{total}}</td>
+						<td>{{awardData.amountInformation.baseExercisedOptionsValue}}</td>
+						<td>{{awardData.amountInformation.totalBaseExercisedOptionsValue}}</td>
 					</tr>
 					<tr>
 						<td><b>Base and All Options Value:</b></td>
-						<td>{{current}}</td>
-						<td>{{total}}</td>
+						<td>{{awardData.amountInformation.baseAllOptionsValue}}</td>
+						<td>{{awardData.amountInformation.totalBaseAllOptionsValue}}</td>
 					</tr>
 					<tr *ngIf="awardData.templateType == 'AWARD'">
 						<td><b>Fee Paid for Use of IDV:</b></td>
-						<td>{{current}}</td>
-						<td>{{total}}</td>
+						<td>{{awardData.amountInformation.feePaidForUseIDV}}</td>
+						<td></td>
 					</tr>
 					<tr *ngIf="awardData.templateType == 'OTA' || awardData.templateType == 'OTI'">
 						<td><b>Non-Governmental Dollars:</b></td>
-						<td>{{current}}</td>
-						<td>{{total}}</td>
+						<td>{{awardData.amountInformation.nonGovernmentDollar}}</td>
+						<td>{{awardData.amountInformation.totalNonGovernmentDollar}}</td>
 					</tr>
 				</table>
 				<h3 id="purchaserInformation">Purchaser Information</h3>
