--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -34,6 +34,50 @@
   </div>
 
   <div class="usa-grid">
+    <h2>Location Services Demo</h2>
+    <div class="usa-width-one-whole">
+      <div class="usa-width-one-half m_R-0">
+        <button class="usa-button-primary" (click)="getAllCountriesJSON()">Get All Countries</button>
+        <button class="usa-button-transparent" (click)="clearAllCountriesJSON()"><i class="fa fa-trash" aria-hidden="true"></i></button>
+        <div class="usa-width-one-whole m_T-1x">
+          <textarea style="overflow-y: scroll;height: 250px;resize: none;">{{locationAllCountryJSON | json}}</textarea>
+        </div>
+        <div class="usa-width-one-whole m_T-1x">
+          <samSelect [(model)]="locationResultModel"
+                     [name]="locationResultConfig.name"
+                     [options]="locationResultConfig.options"
+                     [label]="locationResultConfig.label"
+                     [hint]="locationResultConfig.hint"
+                     [errorMessage]="locationResultConfig.errorMessage"
+                     [disabled]="locationResultConfig.disabled">
+
+          </samSelect>
+        </div>
+      </div>
+      <div class="usa-width-one-half">
+        <div class="usa-width-one-third relative m_R-0"> &nbsp;
+          <samSelect class="usa-width-one-whole" style="position:absolute;top:-27px"
+                     [(model)]="locationSelectModel"
+                     [name]="locationSelectConfig.name"
+                     [options]="locationSelectConfig.options"
+                     [label]="''"
+                     [hint]="locationSelectConfig.hint"
+                     [errorMessage]="locationSelectConfig.errorMessage"
+                     [disabled]="locationSelectConfig.disabled">
+          </samSelect>
+        </div>
+        <input class="usa-width-one-third m_R-0" [(ngModel)]="locationQueryStr">
+        <button class="usa-button-big m_0" (click)="searchCountry(locationSelectModel,locationQueryStr)">Search</button>
+        <div class="usa-width-one-whole m_T-1x">
+          <textarea style="overflow-y: scroll;height: 250px;resize: none;">{{locationSearchCountryJSON | json}}</textarea>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div class="usa-grid">
     <h2>Button Component &lt;samButton&gt;</h2>
     <div class="usa-width-one-whole">
       <div class="usa-width-one-fourth">
