--- a/src/styles/components/_collapsible.scss
+++ b/src/styles/components/_collapsible.scss
@@ -19,6 +19,7 @@ div.sam-collapsible div.collapsible-header .expand-hide {
 
 div.sam-collapsible div.collapsible-content{
   padding: .5rem 1.5rem;
+  position: relative;
 }
 
 div.sam-collapsible div.collapsible-content.closed {
