Fixes Voiceover reading incorrect number of list items

--- a/src/app/app-components/history/history.template.html
+++ b/src/app/app-components/history/history.template.html
@@ -1,3 +1,4 @@
+<i class="fa fa-minus" aria-hidden="true"></i>
 <ul>
   <li *ngFor="let item of data" [class.current]="item.id == currentId">
     <span>  
@@ -9,3 +10,4 @@
     </span>
   </li>
 </ul>
+<i class="fa fa-minus" aria-hidden="true"></i>
