Updating current item symbol

--- a/src/styles/components/_history.scss
+++ b/src/styles/components/_history.scss
@@ -24,6 +24,8 @@ history{
       
       &.current:before{
         color: #ccc;
+        content: "\f0a9" !important;
+        background-color: white;
       }
       
       span{
