Add in test cases

--- a/src/app/organization-detail/organization-detail.template.html
+++ b/src/app/organization-detail/organization-detail.template.html
@@ -9,12 +9,11 @@
         </div>
       </div>
       <ul class="usa-sidenav-list">
-        <li><h3>Farm Supplies Management</h3></li>
-        <li><a [routerLink]="['/organization-detail/profile']">Profile</a></li>
-        <li><a [routerLink]="['/organization-detail/profile']">Hierarchy</a></li>
-        <li><a [routerLink]="['/organization-detail/profile']">Access</a></li>
-        <li><a [routerLink]="['/organization-detail/profile']">Administration</a></li>
-
+        <li><h3>{{orgName}}</h3></li>
+        <li><a [ngClass]="getSectionClass('Profile')" [routerLink]="['/organization-detail',orgId,'profile']" (click)="selectCurrentSection('Profile')">Profile</a></li>
+        <li><a [ngClass]="getSectionClass('Hierarchy')" (click)="selectCurrentSection('Hierarchy')">Hierarchy</a></li>
+        <li><a [ngClass]="getSectionClass('Access')" (click)="selectCurrentSection('Access')">Access</a></li>
+        <li><a [ngClass]="getSectionClass('Administration')" (click)="selectCurrentSection('Administration')">Administration</a></li>
       </ul>
     </div>
   </aside>
