--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -38,9 +38,9 @@
     <div class="usa-width-one-whole">
       <div class="usa-width-one-half m_R-0">
         <button class="usa-button-primary" (click)="getAllCountriesJSON()">Get All Countries</button>
-        <button class="usa-button-transparent" (click)="clearAllCountriesJSON()"><i class="fa fa-trash" aria-hidden="true"></i></button>
+        <button class="usa-button-transparent" (click)="clearAllCountriesJSON()">Clear <i class="fa fa-trash" aria-hidden="true"></i></button>
         <div class="usa-width-one-whole m_T-1x">
-          <textarea style="overflow-y: scroll;height: 250px;resize: none;">{{locationAllCountryJSON | json}}</textarea>
+          <textarea readonly style="overflow-y: scroll;height: 250px;resize: none;">{{locationAllCountryJSON | json}}</textarea>
         </div>
         <div class="usa-width-one-whole m_T-1x">
           <samSelect [(model)]="locationResultModel"
@@ -69,7 +69,9 @@
         <input class="usa-width-one-third m_R-0" [(ngModel)]="locationQueryStr">
         <button class="usa-button-big m_0" (click)="searchCountry(locationSelectModel,locationQueryStr)">Search</button>
         <div class="usa-width-one-whole m_T-1x">
-          <textarea style="overflow-y: scroll;height: 250px;resize: none;">{{locationSearchCountryJSON | json}}</textarea>
+          <textarea readonly style="overflow-y: scroll;height: 250px;resize: none;">{{locationSearchCountryJSON | json}}</textarea>
+          <button class="usa-button-transparent" (click)="clearSearchCountryJSON()">Clear <i class="fa fa-trash" aria-hidden="true"></i></button>
+
         </div>
       </div>
     </div>
