Added Styles and Updated UI-kIt
Added styles for autocomplete-dropdown. Added autocomplete-dropdown
example to UI-kit

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -84,7 +84,6 @@
         [(model)]="selectModel"
         [name]="selectConfig.name"
         [options]="selectConfig.options"
-        [label]="selectConfig.label"
         [hint]="selectConfig.hint"
         [errorMessage]="selectConfig.errorMessage"
         [disabled]="selectConfig.disabled">
@@ -513,9 +512,22 @@
     <pre>{{listOptions | json}}</pre>
   </div>
   <div class="usa-width-one-fourth">
-      <sam-list-input [control]="listControl" [options]="listOptions"></sam-list-input>
+      <sam-list-input [name]="wawaweewa" [control]="listControl" [options]="listOptions"></sam-list-input>
   </div>
   <div class="usa-width-one-fourth">
-      <sam-list-input [control]="listControl" [selections]="[1,4]" [options]="listOptions"></sam-list-input>
+      <sam-list-input [name]="gogogogogogo" [control]="listControl" [selections]="[1,4]" [options]="listOptions"></sam-list-input>
   </div>
+
+  <div class="usa-grid">
+    <h2 class="usa-width-one">Sam Autocomplete Dropdown</h2>
+  </div>
+  <div class="usa-width-one-half">
+    <sam-autocomplete-dropdown [(ngModel)]="searchValue" [name]="searchName" [options]="dropdownSearch"></sam-autocomplete-dropdown>
+  </div>
+  <div class="usa-width-one-half">
+    {{searchValue}}
+  </div>
+
+
+
 </div>
