--- a/src/styles/components/_autocomplete.scss
+++ b/src/styles/components/_autocomplete.scss
@@ -6,6 +6,7 @@
 .sam-autocomplete {
   display: inline-block;
   overflow: hidden;
+  width: 100%;
 
   #sam-autocomplete-results {
     width: 100%;
