--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -45,6 +45,7 @@
 @import 'components/feedback-form';
 @import 'components/well';
 @import 'components/autocomplete';
+@import 'components/autocomplete-dropdown';
 
 @import 'pages/awards';
 @import 'pages/entity-object-view';
