Adding blue styles

--- a/src/styles/pages/_opportunity.scss
+++ b/src/styles/pages/_opportunity.scss
@@ -263,7 +263,14 @@
     color: #003264;
     font-size: 1.7rem;
   }
-
+  .usa-color-blue{
+    color: #003264; 
+  }
+  .usa-changes{
+    del, .changed{
+      color: #003264;  
+    }
+  }
   strike{
     color: #003264;
   }
