SAM-7180 Intial Commit

--- a/src/app/assistance-listing/assistance-listing-workspace/program-result/assistance-program-result.template.html
+++ b/src/app/assistance-listing/assistance-listing-workspace/program-result/assistance-program-result.template.html
@@ -4,7 +4,7 @@
 </p>
 
 <h3 class="assistance-program-title">
-  <a [routerLink]="['/programs', data.id, 'edit']">{{data.data.title}}</a>
+  <a [routerLink]="['/programs', data.id, 'view']">{{data.data.title}}</a>
 </h3>
 <div class="usa-grid-full">
   <div class="usa-width-two-thirds">
