--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -1,3 +1,4 @@
+<script src="assistance-listing.page.spec.ts"></script>
 <div class="usa-grid assistance-listing-page">
 
   <!--Sidebar-->
@@ -35,7 +36,15 @@
 
     <section id="program-information">
       <h1>
-        <span class="field" id="program-title">{{program?.data?.title}}</span>
+
+        <div class="usa-grid-full">
+          <div class="usa-width-two-thirds">
+            <span class="field" id="program-title">{{program?.data?.title}}</span>
+          </div>
+          <div class="usa-width-one-third">
+            <i class="fa fa-pencil" aria-hidden="true" *ngIf="program.status?.code!='published'" [routerLink]="['/programs',program.id, 'edit']"></i>
+          </div>
+        </div>
       </h1>
 
       <p class="field" id="program-alternative-names" *ngIf="program.data?.alternativeNames && program.data?.alternativeNames[0] != null">
@@ -475,11 +484,11 @@
 
       <h3>Records:</h3>
 
-      <p class="field" id="program-postaward-records" *ngIf="(program.data?.postAward.records?.content) && (program.data.postAward.records.content != '')">
-        {{program.data.postAward.records.content}}
+      <p class="field" id="program-postaward-records" *ngIf="(program.data?.postAward?.records?.content) && (program.data?.postAward?.records.content != '')">
+        {{program.data?.postAward?.records?.content}}
       </p>
 
-      <p class="field" id="program-postaward-records" *ngIf="!(program.data?.postAward.records?.content) || (program.data.postAward.records.content == '')">
+      <p class="field" id="program-postaward-records" *ngIf="!(program.data?.postAward?.records?.content) || (program.data?.postAward?.records?.content == '')">
         No Data Available.
       </p>
 
