Theming sticky label

--- a/src/app/app-components/object-form/object-form.template.html
+++ b/src/app/app-components/object-form/object-form.template.html
@@ -12,7 +12,7 @@
 
       <div *ngFor="let item of objectFormData; let i=index;" [id]="item.section" [class.hide]="selectedPage !== i">
         <a [routerLink]="['#' + item.section , {id: i}]" fragment="item.section"></a>
-        <div id="stickyLabel" *ngIf="i>0 && mode=='edit'">Edit {{item.label}} - {{stickyLabel}}</div>
+        <div id="stickyLabel" class="sticky-label" *ngIf="i>0 && mode=='edit'">Edit {{item.label}} - {{stickyLabel}}</div>
         <form-field *ngFor="let field of item.fields; let j=index;"
           [field]="field"
           [control]="mainForm.controls[item.section].controls[field.name]"
