--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -12,4 +12,11 @@
   .sam-list-input .label-wrapper{
     max-width: 480px;
   }
+  
+  .sticky-label{
+    color: #a6a6a6;
+    letter-spacing: -0.3px;
+    font-size: 1.6rem;
+  }
+  
 }
